tf-gke-helm-iap-pg-ckan/setup-workloads/gce_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.global-static-ip-name: "ipv4-address"
spec:
  rules:
  - host: "ckan.timtech4u.dev"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: ingress-service
            port:
              number: 80
